fixed h1 not centered

--- a/static/css/frame.css
+++ b/static/css/frame.css
@@ -15,7 +15,7 @@ body, html {
     justify-content: flex-end;
 }
 
-#logo-nav{
+#logo-nav {
     display: flex;
     justify-content: center;
 }
@@ -26,7 +26,7 @@ body, html {
     margin-top: -120px;
 }
 
-.nav-btn{
+.nav-btn {
     background-color: #32CD32;
     border: none;
     text-align: center;
@@ -38,8 +38,8 @@ body, html {
     border-left: 3px solid #32140b;
 }
 
-.nav-btn:hover{
-    background-color:#32140b;
+.nav-btn:hover {
+    background-color: #32140b;
     border: none;
     text-align: center;
     text-decoration: none;
@@ -48,4 +48,8 @@ body, html {
     color: #ADFF2F;
     padding-right: 10px;
     border-left: 3px solid #32140b;
+}
+
+h1 {
+    padding-left: 30px;
 }
